# Mixture-of-Experts-mlx

./: .gitignore  README.md  TODO.md  convert_bin_safetensors.py  example_custom_metal_kernel.py  llm_inference.py  main.py  positional_embeddings.md  pyproject.toml  rename_keys_safetensor.py  shakespeare.yaml  shakespeare_2.yaml  shakespeare_3.yaml  test_mlx.py
configs/: shakespeare_3.yaml  shakespeare_4.yaml  shakespeare_5.yaml  shakespeare_6.yaml  shakespeare_7.yaml  shakespeare_8.yaml  shakespeare_9.yaml
src/: attention.py  aux_losses.py  mlx_extension.py  moe.py  positional_embeddings.py  transformer.py  utils.py
writings/: attention.md  auxiliary_losses.md  models.md  positional_embeddings.md  router_types.md
